fix: Avoid page jumping when scrollbar appears (#193)

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,6 +1,8 @@
 html {
   font-size: 62.5%;
   color: var(--color-onLight);
+
+  overflow-y: scroll;
 }
 
 body {
